# nienna

./: .gitignore  Makefile  README.md  docker-compose.yml
.deploy/: publish_images.go
.docker/: Caddyfile  Makefile  docker-compose.app.dev.yml  docker-compose.app.yml  docker-compose.services.yml  hadolint.sh  nginx.conf
.github/: dependabot.yml
backburner/: Cargo.toml  Dockerfile  Makefile
backburner/.dev/: Dockerfile
backburner/src/: event_publisher.rs  main.rs
backburner/src/amqp/: client.rs  errors.rs  mod.rs  serialization.rs  serialization_tests.rs
backburner/src/clients/amqp/: client.rs  errors.rs  mod.rs  serialization.rs  serialization_tests.rs
backburner/src/clients/s3/: client.rs  client_tests.rs  mod.rs
backburner/src/jobs/: errors.rs  helpers.rs  helpers_tests.rs  job_video_process.rs  job_video_process_tests.rs  jobs.rs  jobs_tests.rs  mod.rs
backburner/src/s3/: client.rs  client_stub.rs  client_tests.rs  errors.rs  mod.rs
backburner/src/video_processing/: errors.rs  mod.rs  video_processor.rs  video_processor_tests.rs
backburner/src/video_processing/jobs/: job_video_process.rs  job_video_process_tests.rs
backburner/src/worker_pool/: mod.rs  pool.rs  worker.rs  worker_pool.rs  worker_pool_tests.rs
backburner/src/worker_pool/jobs/: job_errors.rs  job_helpers.rs  job_helpers_tests.rs  mod.rs
cliff/: .env.dev.list  (+8 more)
services/backburner/: Cargo.toml  Dockerfile  Makefile
services/backburner/.dev/: Dockerfile
services/backburner/src/: main.rs
services/backburner/src/clients/: mod.rs
services/backburner/src/clients/amqp/: errors.rs  serialization.rs  serialization_tests.rs
services/backburner/src/clients/s3/: client_stub.rs
services/backburner/src/video_processing/: video_processor.rs  video_processor_tests.rs
services/backburner/src/video_processing/jobs/: job_video_process.rs  mod.rs
services/backburner/src/worker_pool/: pool.rs  pool_tests.rs  worker.rs
services/backburner/src/worker_pool/jobs/: job_helpers_tests.rs  mod.rs
(+277 files in other folders)
