[package]
name = "backburner"
version = "0.1.0"
authors = ["Raboliot le gris <jordan@raboland.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.3"
nanoid = "0.3.0"

serde = { version = "1.0.125", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"

futures-lite = "1.11.3"
async-global-executor = "2.0.2"

lapin = "1.6.8"
rust-s3 = "0.26.4"
