[package]
name = "backburner"
version = "0.1.0"
authors = ["Raboliot le gris <jordan@raboland.fr>"]
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
nanoid = "0.4.0"

serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.69"

tokio = { version = "1", features = ["full"] }
futures-lite = "1.12.0"

lapin = "1.8.0"
rust-s3 = "0.26.4"

[dev-dependencies]
serial_test = "0.5.1"