[package]
name = "backburner"
version = "0.1.0"
authors = ["Raboliot le gris <jordan@raboland.fr>"]
edition = "2018"

[dependencies]
log = "0.4.16"
env_logger = "0.9.0"
nanoid = "0.4.0"

serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.79"

tokio = { version = "1", features = ["full"] }
futures-lite = "1.12.0"

lapin = "1.10.0"
rust-s3 = "0.31.0"

[dev-dependencies]
serial_test = "0.6.0"